// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar code paths \`query\` prop \`query\` is not provided should render correctly 1`] = `
<div
  className="search-books"
>
  <div
    className="search-books-bar"
  >
    <Link
      className="close-search"
      replace={false}
      to="/my-reads"
    >
      Close
    </Link>
    <div
      className="search-books-input-wrapper"
    >
      <DebounceInput
        debounceTimeout={300}
        element="input"
        forceNotifyByEnter={true}
        forceNotifyOnBlur={true}
        minLength={1}
        onChange={[MockFunction]}
        placeholder="Search by title or author"
        type="text"
      />
    </div>
  </div>
  <div
    className="search-books-results"
  >
    <ol
      className="books-grid"
    />
  </div>
</div>
`;

exports[`SearchBar code paths \`query\` prop \`query\` is provided should render correctly 1`] = `
<div
  className="search-books"
>
  <div
    className="search-books-bar"
  >
    <Link
      className="close-search"
      replace={false}
      to="/my-reads"
    >
      Close
    </Link>
    <div
      className="search-books-input-wrapper"
    >
      <DebounceInput
        debounceTimeout={300}
        element="input"
        forceNotifyByEnter={true}
        forceNotifyOnBlur={true}
        minLength={1}
        onChange={[MockFunction]}
        placeholder="Search by title or author"
        type="text"
        value="fake query"
      />
    </div>
  </div>
  <div
    className="search-books-results"
  >
    <ol
      className="books-grid"
    />
  </div>
</div>
`;
